The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.
The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.This will be the starting position for the robot with the specific number.<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">AndroidRally</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_help">Help</string>
	<string name="current_games">Current games</string>
	<string name="title_activity_game_configuration">Set up</string>
	<string name="round_time">Round time</string>
	<string name="card_time">Card time</string>
	<string name="round_time_default">12 hours</string>
	<string name="card_time_default">45 seconds</string>
	<string name="players_text">Number of bots</string>
	<string name="number_of_players_default">4 bots</string>
	<string name="start_button">Start Game</string>
	<string name="set_up_button">Set up game</string>
	<string name="new_game">Start new game</string>
	<string name="start_game">Create game</string>
	<string name="help">Placeholder for help</string>
	<string name="close_help">Done</string>
	<string name="gamemode">Game mode</string>
	<string name="singleplayer">Single player</string>
	<string name="multiplayer">Multiplayer (not implemented)</string>
	<string name="delete_game">Do you want to delete this game?</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="title_activity_help">Help</string>
	<string name="general_game_idea">The game is won by reaching all checkpoints before your opponents. This is done by selecting the right cards to program your robot to navigate through the map and other robots. Avoid taking damage and losing lives as you only got three lives to use.</string>
	<string name="round">Every round you will receive up to nine cards, lowered by one for each damage you have taken. You should select five of these when trying to guide the robot to the next checkpoint. After all robots have performed a card the board elements on the map will execute their actions. Consider this when you choose your cards. The last thing to happen before the next card is that all robot will fire their laser straight forward and if they hit another robot they will take one damage.</string>
	<string name="board_elements">The gameboard contains various board elements which can affect your robot in both positive and negative ways.</string>
	<string name="checkpoints">The game is won by standing on all checkpoints in the correct order, remember that checkpoint is the last board element which will execute its action so be careful not to be pushed away before all checkpoints are done. A checkpoint will also repair one damage from the robot.</string>
	<string name="conveyor_belt">This element will push you in the direction the arrows are pointing, the distance you will be pushed varies depending on how many arrows there are on a single tile.</string>
	<string name="gears">A gear will rotate you 90° in the direction the arrows are pointing.</string>
	<string name="repair">This will repair your robot reducing the damage taken by one.</string>
	<string name="hole">Do not walk into a hole, it will cause you to die which means that you lose a life and not be able to walk more that round.</string>
	<string name="dock">This will be the starting position for the robot with the specific number.</string>

</resources>
