<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity" >

	<TextView
		android:id="@+id/helpText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/help" />
	
	<TextView
		android:id="@+id/generalGameIdea"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/general_game_idea" />
	
	<TextView
		android:id="@+id/boardElements"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/board_elements" />
	
	<TextView
		android:id="@+id/checkpoints"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkpoints" />
	
	<TextView
		android:id="@+id/conveyorBelt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/conveyor_belt" />
	
	<TextView
		android:id="@+id/gears"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/gears" />
	
	<TextView
		android:id="@+id/repair"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/repair" />
	
	<TextView
		android:id="@+id/hole"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/hole" />
	
	<TextView
		android:id="@+id/dock"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dock" />

	<TextView
	    android:id="@+id/round"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/checkpoints"
	    android:layout_alignParentBottom="true"
	    android:text="@string/round" />

</RelativeLayout>
