<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#33333333"
	android:padding="10dp" >

    <TextView
    	android:id="@+id/deleteString"
    	android:textColor="@android:color/white"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_centerHorizontal="true"
    	android:text="@string/delete_game" />

    <Button
    	android:id="@+id/yesButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignRight="@+id/deleteString"
    	android:layout_below="@+id/deleteString"
    	android:layout_marginTop="20dp"
    	android:text="@string/yes" />

    <Button
    	android:id="@+id/noButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBottom="@+id/yesButton"
    	android:layout_alignLeft="@+id/deleteString"
    	android:text="@string/no" />

</RelativeLayout>