<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backGround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

	<Button
	    android:id="@+id/startConfigurationButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:background="@drawable/button_style"
	    android:contentDescription="@string/set_up_button"
	    android:onClick="startConfiguration"
	    android:src="@drawable/set_up_game"
	    android:text="@string/new_game"
	    android:textColor="#ffffff" />
	
    <TextView
        android:id="@+id/currentGamesString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startConfigurationButton"
        android:layout_below="@+id/startConfigurationButton"
        android:layout_marginTop="12dp"
        android:text="@string/current_games"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/currentGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currentGamesString" >
    </ListView>
</RelativeLayout>
